# axum_proto_blake_redis

./: Cargo.toml  README.md  build.rs
src/: auth.proto  main.rs
