[package]
name = "proy"
version = "1.4.4"
edition = "2024"

[dependencies]
axum = { version = "0.7.5", features = ["macros"] }
headers = "0.4.0"
tokio = { version = "1.37.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["trace"] }

redis = { version = "0.25.3", features = ["tokio-comp"] }
prost = "0.12.3"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"

blake3 = "1.5.1"
base64 = "0.22.0"
chrono = "0.4.38"
subtle = "2.5.0"

[build-dependencies]
prost-build = "0.12.3"
